# starrock

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy.sh  index.html  index.js  package-lock.json  package.json  pkg_index_js.index.js  webpack.config.js
src/: background.rs  buffer.rs  bullet.rs  bullet_renderer.rs  collision.rs  context.rs  dom.rs  foreground.rs  foreground_renderer.rs  gl.rs  keyboard_event_bus.rs  lib.rs  matrix.rs  rock.rs  rock_renderer.rs  rock_shape.rs  rock_spawner.rs  run.rs  run_loop.rs  ship.rs  ship_controller.rs  ship_renderer.rs
src/gl/: buffer.rs  texture.rs
src/matrix/: matrix.rs  orthographic.rs  transform.rs
src/rock/: renderer.rs  rock.rs  shape.rs  spawner.rs
src/ship/: boost.rs  controller.rs  gun.rs  renderer.rs  ship.rs
