[package]
name = "starrock"
version = "0.1.0"
authors = ["felixnaredi <felixnaredi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
derive_builder = "0.10.2"
getrandom = { version = "0.2.3", features = ["js"] }
getset = "0.1.1"
js-sys = "0.3.53"
ndarray = "0.15.3"
rand = "0.8.4"
vecmath = "1.0.0"
wasm-bindgen = "0.2.76"

[dependencies.web-sys]
version = "0.3.53"
features = [
    "Document",
    "Element",
    "EventListener",
    "EventTarget",
    "HtmlCanvasElement",
    "KeyboardEvent",
    "MouseEvent",
    "WebGlBuffer",
    "WebGlFramebuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "Window",
]